<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_main"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:gravity="center"
            android:text="@string/analysis_of_heart_rate_variability"
            android:textColor="@color/ap_black"
            android:textSize="@dimen/dp_15"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dp_12"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/analysis_of_heart_rate_variability_msg"
            android:textColor="#666666"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/analysis_of_heart_rate_variability_describe"
            android:textColor="#666666"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/time_domain_parameter"
            android:textColor="#344955"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center"
            android:text="PNN50、SDNN、NN50"
            android:textColor="#666666"
            android:textSize="@dimen/dp_11" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/frequency_parameter"
            android:textColor="#344955"
            android:textSize="@dimen/dp_13" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center"
            android:text="HF_LF"
            android:textColor="#666666"
            android:textSize="@dimen/dp_11" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="@dimen/dp_90"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/str_sure"
            android:textAllCaps="false"
            android:textColor="#A5A8EA" />
    </LinearLayout>
</LinearLayout>