<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clayouy_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_border"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_hi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/str_hint_hi"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dp_18" />

        <TextView
            android:id="@+id/tv_dec"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/str_hint_dec"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dp_16" />
        <ImageView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dec"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_4"
            app:layout_constraintDimensionRatio="H,23:19"
            android:src="@drawable/icon_health_hint" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clayouy_top">

        <TextView
            android:id="@+id/tv_know"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_health"
            android:paddingLeft="@dimen/dp_36"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_36"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/health_i_know"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dp_20" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>